Fixed .option-row spacing This fixes the close image being absolute and overlapping the <select>

--- a/css/main.css
+++ b/css/main.css
@@ -110,7 +110,8 @@ ul
 }
 .option-row
 {
-	position: relative;
+	display: flex;
+	align-items: center;
 	margin-top: 8px;
 	margin-bottom: 5px;
 }
@@ -121,13 +122,11 @@ ul
 }
 .closeImage
 {
-	cursor: pointer;
-	width: 19px;
-	left: 535px;
 	padding: 5px;
-	top: -3px;
-	position: absolute;
-    border-radius: 100px;
+	margin-left: 15px;
+	cursor: pointer;
+	width: 20px;
+	border-radius: 100px;
 	transition: background 0.2s;
 }
 .closeImage:hover
@@ -145,12 +144,12 @@ ul
 #popupTitle
 {
 	margin-top: 0px;
-    margin-bottom: 0px;
-    position: absolute;
-    top: 10px;
-    left: 70px;
-    font-size: 24px;
-    font-weight: normal;
+	margin-bottom: 0px;
+	position: absolute;
+	top: 10px;
+	left: 70px;
+	font-size: 24px;
+	font-weight: normal;
 }
 #popupLogo
 {
